--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <link rel="stylesheet" type="text/css" href="style.css">
 <head>
+  <h1>"Eric Lin"</h1>
 </head>
 <body>
 <div class="center">
