--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+#<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="style.css">
+#<link rel="stylesheet" type="text/css" href="style.css">
 <head>
   <h1>Eric Lin</h1>
 </head>
 <body>
-<div class="center">
-<img src="PERDUERIC.png" alt="homepage logo">
-</div>
+#<div class="center">
+#<img src="PERDUERIC.png" alt="homepage logo">
+#</div>
 </body>
 </html>
