--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-#<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
-#<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 <head>
   <h1>Eric Lin</h1>
 </head>
