--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="center">
-<img src="docs/assets/PERDUERIC.png" alt="homepage logo">
+<img src="docs/assets/PERDUERIC.png" alt="homepage logo"/>
 </div>
 </body>
 </html>
