--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <link rel="stylesheet" type="text/css" href="docs/css/style.css">
 <head>
-  <h1>Eric Lin</h1>
+  <title>Welcome to my Webpage!</title>
 </head>
 <body>
 <div class="center">
