--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
 <div class="center">
 <img src="docs/assets/PERDUERIC.png" alt="homepage logo"/>
+<nav>
+<a href="./Options.html">Continue Here</a>
+</nav>
 </div>
 </body>
 </html>
