--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="center">
-<img src="docs/assets/PERDUERIC.png" alt="homepage logo"/>
+<img src="docs/assets/PERDUERIC.png" alt="homepage logo" style="width:582px;height:347px;/>
 <nav>
 <a href="./Options.html">Continue Here</a>
 </nav>
