--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
 <link rel="stylesheet" type="text/css" href="docs/css/style.css">
+<link rel="stylesheet" type="text/css" href="docs/css/transitions.css">
+
 <head>
   <title>Welcome to my Webpage!</title>
 </head>
-<body>
+<body >
 <div class="center">
-<img src="docs/assets/PERDUERIC.png" alt="homepage logo" style="width:388px;height:231px;>
-<nav>
-<a href="./Options.html">Continue Here</a>
-</nav>
+<img class = "u--fadeInUp" src="docs/assets/PERDUERIC.png" alt="homepage logo" style="width:388px;height:231px;">
 </div>
+<div class = "Delayed_Fadein">
+<p class = "wordcenter" style="font-family:'Courier New'" >
+>Get to know me and my accomplishments with my brand new website!!!
+</p>
+</div>
+
+<nav class = "wordcenter" style="font-family:'Courier New'">
+  <a class = button_Fadein href="./Options.html">>Continue Here</a>
+  </nav>
 </body>
 </html>
+
+
+<script src="main.js"></script>
