--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <title>Welcome to my Webpage!</title>
 </head>
 <body >
+  <div class="transition transition-1 is-active"></div>
 <div class="center">
-<img class = "u--fadeInUp" src="docs/assets/PERDUERIC.png" alt="homepage logo" style="width:388px;height:231px;">
+<img class = "u--slideUp" src="docs/assets/PERDUERIC.png" alt="homepage logo" style="width:388px;height:231px;">
 </div>
-<div class = "Delayed_Fadein">
+<div class = "Desc-slideUp">
 <p class = "wordcenter" style="font-family:'Courier New'" >
 >Get to know me and my accomplishments with my brand new website!!!
 </p>
 </div>
 
 <nav class = "wordcenter" style="font-family:'Courier New'">
-  <a class = button_Fadein href="./Options.html">>Continue Here</a>
+  <a class = Butt-slideUp href="./Options.html">>Click Here To Get Started</a>
   </nav>
 </body>
 </html>
