Added Transition between the first page

--- a/Options.html
+++ b/Options.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="docs/css/style.css">
-<head>
+  <link rel="stylesheet" type="text/css" href="docs/css/style.css">
+  <link rel="stylesheet" type="text/css" href="docs/css/transitions.css"><head>
   <title>Eric Lin</title>
 </head>
 <body>
+  <div class="transition transition-1 is-active"></div>
 <div class="center">
 <h1>About me</h1>
 </div>
 </body>
 </html>
+
+<script src="main.js"></script>
