--- a/Options.html
+++ b/Options.html
@@ -9,7 +9,22 @@
 <div class="center">
 <h1>About me</h1>
 </div>
+<div class="wordcenter">
+  <button class="coolBeans">
+    <nav style="font-family:'Courier New'">
+    <a class = Butt-slideUp href="./Life.html">>Click Here To Get Started</a>
+    </nav>
+  </button>
+  </div>
+  <div class="wordcenter">
+    <button class="coolBeans">
+      <nav style="font-family:'Courier New'">
+      <a class = Butt-slideUp href="./Project.html">>Click Here To Get Started</a>
+      </nav>
+    </button>
+    </div>
 </body>
 </html>
 
 <script src="main.js"></script>
+
