--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <head>
   <title>Welcome to my Webpage!</title>
 </head>
-<body >
-  <div class="transition transition-1 is-active"></div>
+<body>
+  
+  <div class="transition transition-1 is-active2"></div>
 <div class="center">
 <img class = "u--slideUp" src="docs/assets/PERDUERIC.png" alt="homepage logo" style="width:388px;height:231px;">
 </div>
@@ -16,10 +17,13 @@
 >Get to know me and my accomplishments with my brand new website!!!
 </p>
 </div>
-
-<nav class = "wordcenter" style="font-family:'Courier New'">
+<div class="wordcenter">
+<button class="coolBeans">
+  <nav style="font-family:'Courier New'">
   <a class = Butt-slideUp href="./Options.html">>Click Here To Get Started</a>
   </nav>
+</button>
+</div>
 </body>
 </html>
 
